feat(genai): rework story plan (#138)
